--- a/src/style.css
+++ b/src/style.css
@@ -1,4 +1,4 @@
-h1,
+/* h1,
 p {
   font-family: Lato;
 }
@@ -9,4 +9,4 @@ p {
   margin-top: 20px;
   background-color: cornsilk;
   border-radius: 12px;
-}
+} */
